<resources>
    <string name="app_name">basicchat</string>
    <string name="organizer1">Organizer</string>
    <string name="wetter">Wetter</string>
    <string name="rezepte1">Rezepte</string>
    <string name="background">Background</string>
    <string name="kalenderimage">kalenderImage</string>
    <string name="wetterimage">Wetterimage</string>
    <string name="rezeptimage">Rezeptimage</string>
    <string name="kalender">Kalender</string>
    <string name="background_second">background_second</string>
    <string name="wecker">Wecker</string>
    <string name="kalendericon">Kalendericon</string>
    <string name="notizen1">Notizen</string>
    <string name="notizicon">Notizicon</string>
    <string name="organizer2">Organizer</string>
    <string name="textorganizer">textorganizer</string>
    <string name="weckericon">weckericon</string>
    <string name="backgroundweckerscreen">backgroundweckerscreen</string>
    <string name="backgroundwetterscreen">backgroundwetterscreen</string>
    <string name="notizenscreentext">Notizenscreentext</string>
    <string name="notizenscreenicon">Notizenscreenicon</string>
    <string name="notize2n">Notizen</string>
    <string name="im_weckericon">im_weckericon</string>
    <string name="weckerscreentext">weckerscreentext</string>
    <string name="wecker2">Wecker</string>
    <string name="organizertext">organizertext</string>
    <string name="organizer">Organizer</string>
    <string name="notizen">Notizen</string>
    <string name="notizen_hier_eintragen">Notizen hier eintragen</string>
    <string name="hier_notiz_eintragen">Hier Notiz eintragen</string>
    <string name="speichern">Speichern</string>
    <string name="hier_notiz_eintragen_oder_berschreiben">Hier Notiz eintragen oder überschreiben</string>
    <string name="hier_notiz_eintragen_oder_berschreiben2">Hier Notiz eintragen oder überschreiben</string>
    <string name="hier_notiz_eintragen_oder_berschreiben3">Hier Notiz eintragen oder überschreiben</string>
    <string name="hier_notiz_eintragen_oder_berschreiben4">Hier Notiz eintragen oder überschreiben</string>
    <string name="ackrgroundrezept">ackrgroundrezept</string>
    <string name="rezeoticon2">rezeoticon2</string>
    <string name="rezepte">Rezepte</string>
    <string name="deutsch">Deutsch</string>
    <string name="t_rkisch">Türkisch</string>
    <string name="italienisch">Italienisch</string>
    <string name="zuf_llig">Zufällig</string>
    <string name="griechisch">Griechisch</string>
    <string name="deutschflagge1">deutschflagge1</string>
    <string name="turkyflagge">turkyflagge</string>
    <string name="griechflagge">griechflagge</string>
    <string name="italyflagge">italyflagge</string>
    <string name="wuerfeln">wuerfeln</string>
    <string name="turkflag3">turkflag3</string>
    <string name="baklava">Baklava</string>
    <string name="pide">Pide</string>
    <string name="baklavabild">baklavabild</string>
    <string name="bildpide">BildPide</string>
    <string name="zur_ck">Zurück</string>
    <string name="zur_ck2">Zurück</string>
    <string name="rezept1i">Rezept1i</string>
    <string name="zur_ck3">Zurück</string>
    <string name="gyros">Gyros</string>
    <string name="kritharaki_salat">Kritharaki Salat</string>
    <string name="flaggegriech">flaggegriech</string>
    <string name="bildgyros">bildgyros</string>
    <string name="bildsalat">bildsalat</string>
    <string name="homeg">homeg</string>
</resources>