<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="1416dp"
        android:layout_height="1058dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_790679_simple_wallpapers" />

    <Button
        android:id="@+id/but_organizer"
        android:layout_width="232dp"
        android:layout_height="103dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/organizer"
        android:textColor="#F8F7F7"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/organizerImage"
        android:layout_width="198dp"
        android:layout_height="188dp"
        android:contentDescription="@string/kalenderimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/but_organizer"
        app:layout_constraintStart_toStartOf="@+id/but_organizer"
        app:layout_constraintTop_toBottomOf="@+id/but_organizer"
        app:srcCompat="@drawable/calendar__v1" />

    <Button
        android:id="@+id/but_wetter"
        android:layout_width="232dp"
        android:layout_height="103dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/wetter"
        android:textColor="#F8F7F7"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/but_rezepte"
        app:layout_constraintStart_toEndOf="@+id/but_organizer"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_rezepte"
        android:layout_width="232dp"
        android:layout_height="103dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/rezepte"
        android:textColor="#F8F7F7"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wetterImage"
        android:layout_width="239dp"
        android:layout_height="142dp"
        android:contentDescription="@string/wetterimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/but_wetter"
        app:layout_constraintStart_toStartOf="@+id/but_wetter"
        app:layout_constraintTop_toBottomOf="@+id/but_wetter"
        app:srcCompat="@drawable/pngfind_com_weather_icon_png_2733257" />

    <ImageView
        android:id="@+id/rezepteImage"
        android:layout_width="203dp"
        android:layout_height="138dp"
        android:contentDescription="@string/rezeptimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/but_rezepte"
        app:layout_constraintStart_toStartOf="@+id/but_rezepte"
        app:layout_constraintTop_toBottomOf="@+id/but_rezepte"
        app:srcCompat="@drawable/daco_1775891" />

</androidx.constraintlayout.widget.ConstraintLayout>