<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/but_back_wecker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="Zurück"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_weckericon"
        android:layout_width="1503dp"
        android:layout_height="1003dp"
        android:contentDescription="@string/backgroundweckerscreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_790679_simple_wallpapers" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/im_weckericon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alarm_clock" />

    <TextView
        android:id="@+id/txt_weckerscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/weckerscreentext"
        android:fontFamily="@font/aldrich"
        android:text="@string/wecker"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_zeitaktuell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/aldrich"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_datumaktuell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_zeitaktuell"
        app:layout_constraintStart_toStartOf="@+id/txt_zeitaktuell"
        app:layout_constraintTop_toBottomOf="@+id/txt_zeitaktuell" />

    <Button
        android:id="@+id/but_weckersetzen"
        android:layout_width="232dp"
        android:layout_height="103dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="Wecker verwalten"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>