<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/but_back_notizen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="Zurück"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backgroundnotizscreen"
        android:layout_width="1174dp"
        android:layout_height="714dp"
        android:contentDescription="@string/notizenscreentext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/_790679_simple_wallpapers" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/notizenscreenicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_0507" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/notizen"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/not_1"
        android:layout_width="765dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/hier_notiz_eintragen_oder_berschreiben"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/not_2"
        android:layout_width="765dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/hier_notiz_eintragen_oder_berschreiben"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnot1" />

    <EditText
        android:id="@+id/not_3"
        android:layout_width="765dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/hier_notiz_eintragen_oder_berschreiben"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnot2" />

    <EditText
        android:id="@+id/not_4"
        android:layout_width="765dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/hier_notiz_eintragen_oder_berschreiben"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnot3" />

    <Button
        android:id="@+id/but_speichern1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/speichern"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/not_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/not_1" />

    <Button
        android:id="@+id/but_speichern2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/speichern"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/not_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/not_2" />

    <Button
        android:id="@+id/but_speichern3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/speichern"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/not_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/not_3" />

    <Button
        android:id="@+id/but_speichern4"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#437C83"
        android:fontFamily="@font/aldrich"
        android:text="@string/speichern"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/not_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/not_4" />

    <TextView
        android:id="@+id/textnot1"
        android:layout_width="925dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/not_1" />

    <TextView
        android:id="@+id/textnot2"
        android:layout_width="925dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/not_2" />

    <TextView
        android:id="@+id/textnot3"
        android:layout_width="925dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/not_3" />

    <TextView
        android:id="@+id/textnot4"
        android:layout_width="925dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/not_4" />

    <ImageButton
        android:id="@+id/but_home9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/but_back_notizen"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />

</androidx.constraintlayout.widget.ConstraintLayout>